--- a/index.html
+++ b/index.html
@@ -90,19 +90,19 @@
     <div class="game-card">
       <img src="https://raw.githubusercontent.com/rk5021100/assets/main/photos/game2.jpg" alt="Missionaries and Cannibals" />
       <div class="game-card-title">Missionaries & Cannibals</div>
-      <a href="https://yourusername.github.io/missionaries-game/">Play Game</a>
+      <a href="https://rk5021100.github.io/river-2/">Play Game</a>
     </div>
 
     <div class="game-card">
       <img src="https://raw.githubusercontent.com/rk5021100/assets/main/photos/game3.jpg" alt="Thieves and Gold Bags" />
       <div class="game-card-title">Thieves & Gold Bags</div>
-      <a href="https://yourusername.github.io/thieves-game/">Play Game</a>
+      <a href="https://rk5021100.github.io/river-3/">Play Game</a>
     </div>
 
     <div class="game-card">
       <img src="https://raw.githubusercontent.com/rk5021100/assets/main/photos/game1.jpg" alt="Farmer Wolf Sheep Cabbage" />
       <div class="game-card-title">Farmer, Wolf, Sheep, Cabbage</div>
-      <a href="https://yourusername.github.io/farmer-game/">Play Game</a>
+      <a href="https://rk5021100.github.io/river-game/">Play Game</a>
     </div>
   </div>
 </body>
